--- a/client/src/Components/card/card.scss
+++ b/client/src/Components/card/card.scss
@@ -1,11 +1,11 @@
 .card-container {
   margin: 2%;
-  width: 10%;
+  width: 20%;
   border-radius: 10px;
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.2);
-  border: 2px solid #ffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.1);
+  // border: 1px solid #ffff;
   padding: 3% 3%;
-  background-color: #aaa5a5;
+  background-color:transparent;
   opacity: 0.7;
   box-shadow: 3px 7px 13px 2px rgba(0, 0, 0, 0.6);
   -webkit-box-shadow: 3px 7px 13px 2px rgba(0, 0, 0, 0.6);
