--- a/client/src/pages/Landing/Landing.css
+++ b/client/src/pages/Landing/Landing.css
@@ -1,23 +1,72 @@
-.Container-Landing{
-    
-    background-image: url("https://c4.wallpaperflare.com/wallpaper/399/923/701/abstracto-galleta-humor-perro-wallpaper-preview.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 100vh;
-    width: 100vw;
-    position: relative;
-  
+.Container-Landing {
+  background-image: url("../../assets/img/peakpx.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100vh;
+  width: 100vw;
+  position: relative;
 }
-.divHome{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    height: 100%;
+.title-landing {
+  margin: 100px;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family: 'Roboto', sans-serif;
+   margin: -50px;
+  position: absolute;
+  /* padding-top: -300px; */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+    color: white;
+    font-size: 1rem;
+    font-weight: bold;
+    text-shadow: 2px 2px 2px black;
+}
+
+.divHome {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.button-landing {
+  font-size: 1rem;
+  font-weight: bold;
+  width: 120px;
+  height: 60px;
+  border: 2px solid white;
+  border-radius: 10px;
+  background-color: transparent;
+  color: white;
+  cursor: pointer;
+  position: relative;
+}
+.button-landing:hover {
+  background-color: white;
+  color: black;
+  transition: 1s ease;
+}
+.button-landing:before {
+    background-color: red;
+  content: "";
+  position: absolute;
+
+  left: 0%;
+  top: 50%;
+
+  background: transparent;
+  height: 50%;
+  width: 100%;
+
+  transform: perspective(1em) rotateX(40deg) scale(1, 0, 35);
+  filter: blur(8px);
+  transition: 1s ease;
 }
