componente search y funcionalidad estilos

--- a/client/src/Components/navbar/nav.scss
+++ b/client/src/Components/navbar/nav.scss
@@ -21,7 +21,8 @@
             padding: 10px;
             border-radius: 10px;
             font-weight: 700;
-            background-color: #82efea
+            background-color: transparent;
+            color: #fff;
 
 
         }
