--- a/client/src/Components/card/card.scss
+++ b/client/src/Components/card/card.scss
@@ -1,17 +1,20 @@
 .card-container {
-  margin: 2%;
-  width: 20%;
-  border-radius: 10px;
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.1);
-  // border: 1px solid #ffff;
-  padding: 3% 3%;
-  background-color:transparent;
-  opacity: 0.7;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    // margin: 0 auto;
+    width: 20%;
+    height: 100%;
+    
+
+  border-radius: 30px;
+  padding: 3% 3%;  
+  opacity: 0.9;
   box-shadow: 3px 7px 13px 2px rgba(0, 0, 0, 0.6);
   -webkit-box-shadow: 3px 7px 13px 2px rgba(0, 0, 0, 0.6);
   -moz-box-shadow: 3px 7px 13px 2px rgba(0, 0, 0, 0.6);
-  z-index: 1000;
- 
+  
 
   .card-title {
     .nameHome {
@@ -19,11 +22,13 @@
     }
   }
   .body {
+    
     .weightHome {
       margin: 0;
+
     }
-   .temp{
-    text-overflow: ellipsis;
-   }
+    .temp {
+      text-overflow: ellipsis;
+    }
   }
 }
