--- a/client/src/Components/create/create.css
+++ b/client/src/Components/create/create.css
@@ -1,35 +1,72 @@
-.create-form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    
-    padding: 20px;
+.container-form {
+  width: 100%;
+  height: 100%;
+  background-image: url("../../assets/img/fondoformulario.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: relative;
 }
-.create-form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    border: 1px solid black;    
-    padding: 20px;
-   
+.create-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  margin: 0 auto;
+  border: 2px solid black;
+  border-radius: 40px;
+  background-color: rgb(255, 255, 255, 0.3);
+  box-shadow: 3px 7px 13px 2px rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 3px 7px 13px 2px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: 3px 7px 13px 2px rgba(0, 0, 0, 0.6);
 }
-.inputs{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    border: 1px solid black;    
-    padding: 10px;
-   
+
+.inputs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border: 1px solid black;
+  padding: 10px;
 }
-.breed{
-position: relative;
+.breed {
+  position: relative;
 }
+.button-form {
+  font-size: 1rem;
+  font-weight: bold;
+  width: 120px;
+  height: 60px;
+  border: 1px solid white;
+  border-radius: 10px;
+  background-color: transparent;
+  color: white;
+  cursor: pointer;
+  position: relative;
+}
+.buttonsubmit-from{
+    font-size: 1rem;
+    font-weight: bold;
+    width: 120px;
+    height: 60px;
+    border: 1px solid white;
+    border-radius: 10px;
+    background-color: transparent;
+    color: rgba(162, 5, 235, 0.973);
+    cursor: pointer;
+    position: relative;
+}
+.button-form:hover {
+  background-color: white;
+  color: black;
+  transition: 1s ease;
+}
+.buttonsubmit-from:hover{
+    background-color: white;
+    color: black;
+    transition: 1s ease;
+}
+
