avances en pagination

--- a/client/src/Components/cards/cards.scss
+++ b/client/src/Components/cards/cards.scss
@@ -5,12 +5,15 @@
     justify-content: center;
     grid-gap: 40px; 
     margin: 0 auto;
-    padding: 100px 0;
+    padding: 100px 0;  
 
     
 
-    
+}
 
+.pagination{
+    height: 200px;
+    background-color: red;
 }
 // .cards-container{
 //     display: grid;
