--- a/client/src/Components/detail/detail.scss
+++ b/client/src/Components/detail/detail.scss
@@ -1,5 +1,11 @@
 .container-detail{   
-    display: flex;    
+  background-image: url(../../assets//img/fondocontacto.jpg);
+  min-height: 100vh;
+  // height: 100vh;
+  
+}
+.card-detail{
+  display: flex;    
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -7,10 +13,33 @@
     height: 100%;
     border-radius: 40px;
     padding: 3% 3%;
-    // opacity: 0.9;
-    // background-image: url(../../../../assets/images/background.jpg);
+    
     box-shadow: 3px 7px 13px 2px rgba(0, 0, 0, 0.6);
   -webkit-box-shadow: 3px 7px 13px 2px rgba(0, 0, 0, 0.6);
   -moz-box-shadow: 3px 7px 13px 2px rgba(0, 0, 0, 0.6);
   
+}
+.pictureDetalle{
+  width: 150px;
+  height: 150px;
+}
+.divImgDetail{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 50px;
+  height: 50px;
+}
+.button-detail{
+  font-size: 1rem;
+  font-weight: bold;
+  width: 120px;
+  height: 60px;
+  border: 1px solid white;
+  border-radius: 10px;
+  background-color: transparent;
+  color: white;
+  cursor: pointer;
+  position: relative;
 }
