estilos en filter, cards y nav

--- a/client/src/Components/card/card.scss
+++ b/client/src/Components/card/card.scss
@@ -20,6 +20,18 @@
     .nameHome {
       margin: 0;
     }
+    
+  }
+  .image-container{
+
+
+    .image{
+      width: 100%;
+      height: 100%;
+      border-radius: 30px;
+      object-fit: cover;
+    }
+
   }
   .body {
     
