--- a/client/src/Components/cards/cards.scss
+++ b/client/src/Components/cards/cards.scss
@@ -1,27 +1,20 @@
-.cards-container{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    grid-gap: 40px; 
-    margin: 0 auto;
-    padding: 100px 0;  
-
-    
-
+.container-cards {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  grid-gap: 40px;
+  margin: 0 auto;
+  padding: 100px 0;
 }
 
-.pagination{
-    height: 200px;
-    background-color: red;
+.pagination {
+  height: 200px;
+  background-color: red;
 }
-// .cards-container{
-//     display: grid;
-//     grid-template-columns: repeat(auto-fit,  500px);
-//     grid-gap: 40px;   
-//     justify-content: center;
-//     align-items: center;
-//     // padding-top: -100px;
-//     // margin: 0 auto;
-
-// }
+.container-pagination {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 0 auto;
+}
