--- a/client/src/Components/detail/detail.scss
+++ b/client/src/Components/detail/detail.scss
@@ -4,12 +4,20 @@
   // height: 100vh;
   
 }
-.card-detail {
+
+
+.card-detail{
+  display: flex;
+  flex-direction:row-reverse;
+  
+
+}
+.content-detail {
      display: flex;    
-    justify-content: center;
+    justify-content:left;
     align-items: center;
     flex-direction: column;
-    width: 50%;
+    width: 35%;
     height: 100%;
     border-radius: 40px;
     padding: 3% 3%;
