pruebas con los filtros, footer

--- a/client/src/Components/cards/cards.scss
+++ b/client/src/Components/cards/cards.scss
@@ -18,3 +18,12 @@
   justify-content: center;
   margin: 0 auto;
 }
+.Filters {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 0 auto;
+}
+.loading{
+  background-color: red;
+}
