--- a/client/src/Components/footer/footer.scss
+++ b/client/src/Components/footer/footer.scss
@@ -1,5 +1,5 @@
 
- ul {
+.list-footer {
   display: inline-grid;
   grid-auto-flow: row;
   grid-gap: 24px;
@@ -8,39 +8,41 @@
 }
 
 @media (min-width: 500px) {
-  ul {
+  .list-footer {
     grid-auto-flow: column;
   }
 }
 
-a {
+.red-footer-tw {
   color: white;
   text-decoration: none;
   box-shadow: inset 0 -1px 0 hsla(0, 0%, 100%, 0.4);
 }
 
-a:hover {
+.red-footer-tw:hover {
   box-shadow: inset 0 -1.2em 0 hsla(0, 0%, 100%, 0.4);
 }
 
-li:last-child {
+.list:last-child {
   grid-column: 1 / 2;
   grid-row: 1 / 2;
 }
 
-li:hover ~ li p {
+.list:hover ~ li p {
   animation: wave-animation 0.3s infinite;
 }
 
 /* below is just for demo styling */
 
-div {
+.container-footer {
   display: flex;
-  height: 100vh;
+  height: 20vh;
   width: 100%;
   background-color: #002a38;
   line-height: 1.3;
   font-family: Menlo, monospace;
+  padding-top: 100px;
+  margin-top: 100px;
 }
 
 @keyframes wave-animation {
