--- a/client/src/Components/footer/footer.scss
+++ b/client/src/Components/footer/footer.scss
@@ -38,7 +38,7 @@
   display: flex;
   height: 20vh;
   width: 100%;
-  background-color: #002a38;
+  background-color: #cbe8f1;
   line-height: 1.3;
   font-family: Menlo, monospace;
   padding-top: 100px;
