--- a/client/src/Components/search/search.css
+++ b/client/src/Components/search/search.css
@@ -1,7 +1,7 @@
 .container-search{
     display: contents;
-    width: 5ex;
-    height: 5ex;
+   /*  width: ;
+    height: 5ex; */
 }
 
 .input-search{
