--- a/client/src/Components/card/card.scss
+++ b/client/src/Components/card/card.scss
@@ -4,8 +4,9 @@
     justify-content: center;
     align-items: center;
     // margin: 0 auto;
-    width: 200px;
-    height: 300px;
+    width: 20%;
+    height: 30%;
+    min-width: 10%;
     
 
   border-radius: 30px;
@@ -16,13 +17,13 @@
   -moz-box-shadow: 3px 7px 13px 2px rgba(0, 0, 0, 0.6);
   
 
-  .card-title img  {
+  .title-card img  {
     .nameHome {
       margin: 0;
     }
     
   }
-  .image-container{
+  .image-card{
 
 
     .image{
@@ -33,7 +34,12 @@
     }
 
   }
-  .body {
+  .body-card {
+    width: 230px;
+    height: 100px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
     
     .weightHome {
       margin: 0;
@@ -41,6 +47,11 @@
     }
     .temp {
       text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
+      margin: 0;
+      
+      
     }
   }
 }
