--- a/client/src/Components/navbar/nav.scss
+++ b/client/src/Components/navbar/nav.scss
@@ -4,7 +4,7 @@
     justify-content: start;
     align-items: center;
     width: 100%;
-    background-color : #006092;
+    background-color : #a9defa;
 .search-nav{
     margin-left: auto;
     }
