--- a/client/src/Components/navbar/nav.scss
+++ b/client/src/Components/navbar/nav.scss
@@ -5,6 +5,7 @@
     align-items: center;
     width: 100%;
     background-color : #a9defa;
+    height: 120px;
 .search-nav{
     margin-left: auto;
     }
