--- a/client/src/pages/Landing/Landing.css
+++ b/client/src/pages/Landing/Landing.css
@@ -6,24 +6,37 @@
   height: 100vh;
   width: 100vw;
   position: relative;
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
+  
+
 }
 .title-landing {
-  margin: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Roboto', sans-serif;
-   margin: -50px;
-  position: absolute;
-  /* padding-top: -300px; */
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-    color: white;
-    font-size: 1rem;
-    font-weight: bold;
-    text-shadow: 2px 2px 2px black;
+  font-size: 3rem;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 0 0 10px #000;
+  text-align: center;
+  margin-bottom: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+
+
+
+
+
+
+
 }
+
+
+
+
+
 
 .divHome {
   position: absolute;
@@ -38,11 +51,11 @@
   align-items: center;
 }
 .button-landing {
-  font-size: 1rem;
+  font-size: 2rem;
   font-weight: bold;
-  width: 120px;
+  width: 200px;
   height: 60px;
-  border: 2px solid white;
+  border: 1px solid white;
   border-radius: 10px;
   background-color: transparent;
   color: white;
