--- a/client/src/Components/create/create.css
+++ b/client/src/Components/create/create.css
@@ -25,15 +25,31 @@
 }
 
 .inputs {
+
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 400px;
+  margin: 0;
+  padding: 0;
+  padding: 10px;
+  background-color: rgba(206, 201, 201, 0.4);
+  border-radius: 5ex;
+  width: 30ex;
+  
+}
+
+  /* display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
   height: 100%;
   border: 1px solid black;
-  padding: 10px;
-}
+  padding: 10px; */
+
+
 .breed {
   position: relative;
 }
@@ -71,4 +87,27 @@
     color: black;
     transition: 1s ease;
 }
-
+.temperamentsItems{
+  display: flex;
+  flex-wrap:wrap;
+  margin: 0ex;
+  margin-right: 4ex;
+}
+.buttonRemove{
+  position:relative;
+  left: 0.5ex;
+  top: 0.5ex;
+  background-color: rgba(151, 5, 5, 0.747);
+  border-radius: 5ex;
+  border-color: transparent;
+  width: 4ex;
+  height: 4ex;
+}
+.listTemps{
+  background-color: rgba(88, 88, 88, 0.5);
+  border-radius: 5ex;
+  width: 30ex;
+  height: 5ex;
+  text-align: center;
+  margin-top: 2ex;
+}
