--- a/client/src/Components/search/search.css
+++ b/client/src/Components/search/search.css
@@ -1,30 +1,39 @@
-.container-search{
-    display: contents;
-   /*  width: ;
-    height: 5ex; */
+.container-search {
+  display: contents;
 }
 
-.input-search{
-    background-color: rgba(0, 0, 0, 0.322);
-    color: rgba(255, 255, 255, 0.863);
-    border: 5ex;
-    border-radius: 5em;
-    margin-top: 1ex;
-    margin-bottom: 1ex;
-    font-size: 3ex;
-    padding: 1ex;
-    height: 2ex;
-    width: 15ex;
+.input-search {
+  width: 50%;
+  height: 5ex;
+  border: none;
+  border-bottom: 1px solid #ccc;
+  padding: 0;
+  margin: 0;
+  font-size: 1.2em;
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
+  letter-spacing: 1px;
+  color: rgb(243, 237, 237);
+  background-color: transparent;
+
 }
 
-.button-search{
-    cursor: pointer;
-    border: none;
-    width: 4.75ex;
-    background-color: rgba(0, 0, 0, 0);
-}
 
-.button-search:hover{
-    transform: scale(1.2);
-}
+/* .button-search {
+  cursor: pointer;
+  border: none;
+  width: 4.75ex;
+  background-color: rgba(0, 0, 0, 0);
+} */
+/* .button-search{
+  background-color: red;
+ 
+  border: none;
+  width: 4.75ex;
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 1px solid rgb(10, 10, 10);
+} */
 
+/* .button-search:hover {
+  transform: scale(1.2);
+} */
