--- a/client/src/Components/footer/footer.scss
+++ b/client/src/Components/footer/footer.scss
@@ -5,20 +5,29 @@
   grid-gap: 24px;
   justify-items: center;
   margin: auto;
+  font-size: 2rem;
+  
+}
+.list-footer:hover {
+
+
+
 }
 
 
 .red-footer-tw {
-  color: white;
+  color:#3380FF;
   text-decoration: none;
-  box-shadow: inset 0 -1px 0 hsla(0, 0%, 100%, 0.4);
+  
 }
 .red-footer-tw:hover {
-  box-shadow: inset 0 -1px 0 hsla(0, 0%, 100%, 0.8);
+  font-size: 3rem;
+  // box-shadow: inset 0 -1px 0 hsla(0, 0%, 100%, 0.8);
+  animation: wave-animation 0.3s infinite;
 }
 
 .red-footer-tw:hover {
-  box-shadow: inset 0 -1.2em 0 hsla(0, 0%, 100%, 0.4);
+
 }
 
 .list:last-child {
@@ -27,7 +36,7 @@
 }
 
 .list:hover ~ li p {
-  animation: wave-animation 0.3s infinite;
+ 
 }
 
 /* below is just for demo styling */
