--- a/client/src/pages/landing/landingPage.css
+++ b/client/src/pages/landing/landingPage.css
@@ -9,7 +9,7 @@
 .banner {
     width: 100%;
     height: 150vh;
-    background-image: linear-gradient(rgba(0,0,0,0.60), rgba(0, 0, 0, 0.60)),url("../../assets/imgdogs/20112.jpg");
+    /* background-image: linear-gradient(rgba(0,0,0,0.60), rgba(0, 0, 0, 0.60)),url("../../assets/imgdogs/20112.jpg"); */
     background-size: cover;
     background-position: center;
 }
